# mcp-agents-md

./: .env.example  .gitignore  .pre-commit-hook  Dockerfile  README.md  install-hooks.sh  pull_build_start_container.sh  pyproject.toml  requirements.txt  setup.sh  test_server.py
src/mcp_agent_memory/: __init__.py  app.py  backup.py
tests/: test_app.py  test_backup.py
